# recipe-suggester-ai-agent-api-tests

./: .dockerignore  .env.example  .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  run_tests.sh
results/: log.html  output.xml  report.html
tests/: load_env.py
tests/json_schemas/: health_response.json  recipe_suggestions_response.json
tests/resources/: base.robot
tests/suites/: operations.robot  recipe_suggestions.robot
tests/variables/: base.robot
